// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`creates single 5xx alarm (enabled) with expected defaults 1`] = `
Object {
  "Resources": Object {
    "ServiceAlarmsAlbTargets5xxAlarm55A1710E": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "Load balancer received too many 5XX responses from target(s) in ECS service 'my-service'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": Array [
          Object {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          Object {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "HTTPCode_Target_5XX_Count",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarmsAlbTargetsSingle5xxAlarmDEEF5967": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "Load balancer received a 5XX response from target(s) in ECS service 'my-service'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": Array [
          Object {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          Object {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HTTPCode_Target_5XX_Count",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarmsConnectionAlarm1F083C01": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Load balancer is failing to connect to target(s) in ECS service 'my-service'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": Array [
          Object {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          Object {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "TargetConnectionErrorCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarmsHealthAlarm888BAAB5": Object {
      "Properties": Object {
        "AlarmDescription": "There are no healthy target(s) in ECS service 'my-service'.",
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          Object {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HealthyHostCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Minimum",
        "Threshold": 1,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarmsTargetHealthAlarm18599060": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "The load balancer is either receiving bad health checks from or is unable to connect to target(s) in ECS service 'my-service'",
        "AlarmName": "StackServiceAlarmsTargetHealthAlarm30873D46",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "(ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ServiceAlarmsConnectionAlarm1F083C01",
                  "Arn",
                ],
              },
              "\\") OR ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ServiceAlarmsHealthAlarm888BAAB5",
                  "Arn",
                ],
              },
              "\\"))",
            ],
          ],
        },
        "OKActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "ServiceAlarmsTargetResponseTimeAlarmA0DC0898": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "5% of responses from ECS service 'my-service' are taking longer than the expected duration of 1 s.",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/456",
          },
          Object {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/123",
          },
        ],
        "EvaluationPeriods": 1,
        "ExtendedStatistic": "p95",
        "MetricName": "TargetResponseTime",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "Period": 300,
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;

exports[`does not create single 5xx alarm when disabled 1`] = `
Object {
  "Resources": Object {
    "ServiceAlarms2AlbTargets5xxAlarm7FA5A413": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "AlarmDescription": "Load balancer received too many 5XX responses from target(s) in ECS service 'my-service-2'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": Array [
          Object {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/789",
          },
          Object {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/456",
          },
        ],
        "EvaluationPeriods": 3,
        "MetricName": "HTTPCode_Target_5XX_Count",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 10,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarms2ConnectionAlarm0918FCD4": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmDescription": "Load balancer is failing to connect to target(s) in ECS service 'my-service-2'.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": Array [
          Object {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/789",
          },
          Object {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/456",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "TargetConnectionErrorCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarms2HealthAlarmB4C2F55E": Object {
      "Properties": Object {
        "AlarmDescription": "There are no healthy target(s) in ECS service 'my-service-2'.",
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/789",
          },
          Object {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/456",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "HealthyHostCount",
        "Namespace": "AWS/ApplicationELB",
        "Period": 60,
        "Statistic": "Minimum",
        "Threshold": 1,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "ServiceAlarms2TargetHealthAlarm9164518C": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "AlarmDescription": "The load balancer is either receiving bad health checks from or is unable to connect to target(s) in ECS service 'my-service-2'",
        "AlarmName": "Stack2ServiceAlarms2TargetHealthAlarmE2E2B8E1",
        "AlarmRule": Object {
          "Fn::Join": Array [
            "",
            Array [
              "(ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ServiceAlarms2ConnectionAlarm0918FCD4",
                  "Arn",
                ],
              },
              "\\") OR ALARM(\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ServiceAlarms2HealthAlarmB4C2F55E",
                  "Arn",
                ],
              },
              "\\"))",
            ],
          ],
        },
        "OKActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "ServiceAlarms2TargetResponseTimeAlarm4652CF1A": Object {
      "Properties": Object {
        "AlarmActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "AlarmDescription": "5% of responses from ECS service 'my-service-2' are taking longer than the expected duration of 1 s.",
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": Array [
          Object {
            "Name": "LoadBalancer",
            "Value": "app/my-alb/789",
          },
          Object {
            "Name": "TargetGroup",
            "Value": "targetgroup/abc/456",
          },
        ],
        "EvaluationPeriods": 1,
        "ExtendedStatistic": "p95",
        "MetricName": "TargetResponseTime",
        "Namespace": "AWS/ApplicationELB",
        "OKActions": Array [
          Object {
            "Fn::ImportValue": "SupportStack2:ExportsOutputRefTopic269377B7501C5D6AF",
          },
        ],
        "Period": 300,
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;
